增加点击拍照

--- a/recordlib/src/main/res/values/strings.xml
+++ b/recordlib/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="camera_reset">重录</string>
     <string name="camera_save">保存</string>
     <string name="camera_user">使用</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
